Fixed css errors on about
h1 font size was too large causing overflow, reduced from 3em to 2em.  p letter-spacing was too small making it difficult to read, changed to 3px

--- a/src/css/about.sass
+++ b/src/css/about.sass
@@ -22,7 +22,7 @@
 		top: 50px
 		max-height: 300px
 		font-family: Fredericka the Great
-		font-size: 3em
+		font-size: 2em
 	.picture-1a
 		grid-area: picture-1a
 	.picture-2a
@@ -48,6 +48,7 @@
 	font-family: software
 	font-size: 2em
 	font-weight: bold
+	letter-spacing: 3px
 
 @media screen and ( max-width: 1023px )
 	.grid-container-a
